syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.utilities";
option java_outer_classname = "UtilitiesServiceImpl";

package utilities;

service UtilitiesService{
	
	// ------ LIGHTS --------
	
	// Unary RPC
	rpc switchLightPower(LightPowerRequest) returns (LightPowerResponse) {}
	
	// Client streaming RPC
	rpc adjustLightSetting(stream LightSettingRequest) returns (LightSettingResponse) {}
	
	
	
	// ------ HEATING --------
	
	// Unary RPC
	rpc switchHeatPower(HeatPowerRequest) returns (HeatPowerResponse) {}
	
	// Server streaming RPC
	rpc selectHeatTemp(HeatTempRequest) returns (stream HeatTempResponse) {}
	
}

message LightPowerRequest {
	bool lpower = 1;
}

message LightPowerResponse {
	bool lpower = 1;
}

message HeatPowerRequest {
	bool hpower = 1;
}

message HeatPowerResponse {
	bool hpower = 1;
}

message LightSettingRequest {
	int32 setting = 1;
}

message LightSettingResponse {
	int32 setting = 1;
}

message HeatTempRequest {
	int32 temp = 1;
}

message HeatTempResponse {
	int32 temp = 1;
}